2013-09-08  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGGLContext.m,
	* Source/x11/XGGLFormat.m: Better error reporting by converting
	glGetError() to a string.

2013-08-21  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/x11/XIMInputServer.m: Add the setlocale(LC_CTYPE, "") call
	back that I removed last year (r35152).

	I tested the fcitx input method, and without the setlocale call,
	XOpenIM would fail. I'm not sure what the best plan is in the long
	term, I wanted to avoid calling setlocale from the core frameworks
	but in this case xlib seems to require it.

2013-08-02  Ivan Vucica <ivan@vucica.net>

	* Source/opal/OpalContext.m:
	Implementation of -graphicsPort that returns a CGContext

	* Source/opal/OpalGState.m:
	-Stubs for -DPSsetlinejoin:, -DPSsetlinecap:, -DPSsetmiterlimit:
	-Implementation of -DPSimage::::::::::: for 32-bit RGB colorspaces

2013-07-29  Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSContext.m: Replace isa with object_getClass().

2013-07-25  Ivan Vucica <ivan@vucica.net>

	* Source/opal/OpalContext.m:
	Pushing -DPSgsave: and -DPSgrestore: to OpalGState.

	* Source/opal/OpalSurface.m:
	-Disabled doublebuffering temporarily.
	-Work on fixing doublebuffering, including creating subimage
	 properly.
	-Richer debug image output code, plus saving as PNGs.

	* Source/opal/OpalGState.m:
	-DPSfill
	-Setting color now also sets stroke color.
	-Corrected name for -DPSgsave and -DPSgrestore.
	-Implemented -saveClip, -restoreClip.
	-Implemented -DPSeoclip and -DPSeofill.
	-Added dummy DPSshow:, GSShowText:: etc.
	-Implemented -DPScurrentpoint:: so that superclass's
	 DPSrlineto:: works.

	* Headers/opal/OpalSurface.h:
	Added -createCGContexts to header to fix a warning.

2013-07-24  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/w32_movesize.m (-decodeWM_EXITSIZEMOVEParams:::):
	Remove code that caused missing windows content.
	* Source/cairo/CairoContext.m (-flushGraphics): Add experimental
	flush code for Windows.